// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > matches snapshot 1`] = `
<div>
  <span
    aria-hidden="true"
    class="v3-avatar v3-avatar--amber"
    style="width: 18px; height: 18px; font-size: 9px;"
  >
    AB
  </span>
</div>
`;

exports[`StatusDot > matches snapshot for every variant 1`] = `
<div>
  <span
    aria-hidden="true"
    class="v3-dot v3-dot--active"
  />
  <span
    aria-hidden="true"
    class="v3-dot v3-dot--planning"
  />
  <span
    aria-hidden="true"
    class="v3-dot v3-dot--sleep"
  />
  <span
    aria-hidden="true"
    class="v3-dot v3-dot--done"
  />
  <span
    aria-hidden="true"
    class="v3-dot v3-dot--future"
  />
</div>
`;

exports[`Tag > matches snapshot 1`] = `
<div>
  <span
    class="v3-tag"
  >
    accent
  </span>
  <span
    class="v3-tag v3-tag--green"
  >
    green
  </span>
  <span
    class="v3-tag v3-tag--orange"
  >
    orange
  </span>
  <span
    class="v3-tag v3-tag--teal"
  >
    teal
  </span>
</div>
`;
